[package]
name = "transit_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json", "gzip"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"
colored = "2.0.4"
superconsole = "0.2.0"
anyhow = "1.0.75"
derive_more = "0.99.17"
